fix catalog not scrolling properly on mobile

--- a/frontend/src/app/Catalog/CatalogFilters/CatalogFilters.module.scss
+++ b/frontend/src/app/Catalog/CatalogFilters/CatalogFilters.module.scss
@@ -2,6 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	background: transparent;
+	overflow: hidden;
 
 	@include media(mobile, tablet) {
 		display: grid;
@@ -13,6 +14,10 @@
 			'modal';
 		padding-top: 0;
 		align-items: center;
+
+		&[data-modal='true'] {
+			overflow: visible !important;
+		}
 	}
 }
 
@@ -46,6 +51,7 @@
 
 .container {
 	height: 100%;
+	overflow-y: scroll;
 
 	@include media(mobile, tablet) {
 		position: absolute;
@@ -66,33 +72,32 @@
 			display: flex;
 		}
 	}
+}
 
-	.wrapper {
-		display: flex;
-		flex-direction: column;
-		gap: 12px;
+.wrapper {
+	display: flex;
+	flex-direction: column;
+	gap: 12px;
+	background: white;
+	padding: 30px 20px 30px 30px;
+	border-right: 1.5px solid #eaeaea;
+	height: 100%;
+	font-size: 14px;
+	overflow-y: scroll;
+
+	@include media(mobile, tablet) {
+		position: absolute;
+		border-radius: 12px;
 		background: white;
-		padding: 30px 20px 30px 30px;
-		border-right: 1.5px solid #eaeaea;
-		height: 100%;
-		font-size: 14px;
-		overflow-y: scroll;
+		width: 80%;
+		height: 80%;
 
-		@include media(mobile, tablet) {
-			position: absolute;
-			border-radius: 12px;
-			background: white;
-			justify-self: center;
-			width: 80%;
-			height: 80%;
+		&[data-modal='false'] {
+			display: none;
+		}
 
-			&[data-modal='false'] {
-				display: none;
-			}
-
-			&[data-modal='true'] {
-				display: flex;
-			}
+		&[data-modal='true'] {
+			display: flex;
 		}
 	}
 }
